# sheep-rhel

./: Cargo.toml  Makefile  README.md  SHORTCUTS.md
scripts/: build-appimage.sh
src/: cli.rs  config.rs  deps.rs  flatpak_fixes.rs  main.rs  platform.rs  river.rs  session.rs  terminal.rs  theme.rs  utils.rs  xdg_desktop.rs
