[package]
name = "sheep-rhel"
version = "0.1.2"
edition = "2021"
rust-version = "1.78"
authors = ["raadsilva1 <raadsilva1@gmail.com>"]
description = "Provisioner for River Classic on RHEL 10.2"
license = "BSD-2-Clause"
repository = "https://github.com/raadsilva1/sheep-rhel"

[[bin]]
name = "sheep-rhel"
path = "src/main.rs"

[[bin]]
name = "sheep-run"
path = "src/bin/sheep-run.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "process", "fs", "time", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ratatui = "0.29"
crossterm = "0.28"
dirs = "5.0"
libc = "0.2.186"

[profile.release]
opt-level = 3
lto = true
strip = true
